tdf#100105 sw: RTF export: fix empty hyperlinks

For empty hyperlinks the EndURL() is called immediately after StartURL()
Due to the way the various buffers are written, the group closing braces
are written before the groups are opened, which is rather invalid.

Using the m_aRun buffer instead of m_aStyles appears to fix the problem.

(regression from b8907bf3d3b37c686a414ffbbd2d732348aab5b9)

(cherry picked from commit b4855bd63c05096df1a2da339133f243bb30d902)
Reviewed-on: https://gerrit.libreoffice.org/26336
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 744bd590fd2c39638e8df41a569cb2cc376e7450)

Change-Id: I6910e1afa0ee262ae0496cf1d3aa83ae3e537ad0
Reviewed-on: https://gerrit.libreoffice.org/26699
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit f687c57465292e940f9e0d69aa2e4ee3376bd569)